Zmiana TextView na WebView

--- a/TaskForAppformation/res/layout/activity_rss.xml
+++ b/TaskForAppformation/res/layout/activity_rss.xml
@@ -4,17 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ScrollView
-        android:id="@+id/SCROLLER_ID"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:fillViewport="true" >
 
-        <TextView
-            android:id="@+id/textViewArticle"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+        <WebView
+            android:id="@+id/webViewArticle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1.0" />
-    </ScrollView>
+
 
 </LinearLayout>
